[metadata]
name = yclients-api
version = 0.0.7
author = Nikita Shalashkov
author_email = nikita.shalashkov@gmail.com
url = https://github.com/CoolmixZero/yclients-api-python
description = Python YCLIENTS REST API wrapper on ujson and httpx
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = yclients, api, wrapper, python, httpx, ujson
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/CoolmixZero/yclients-api-python/issues

[options]
packages = find:
python_requires = >= 3.7
